css/custom.css
* {font-family: "Integral CF", sans-serif;
    max-width: 100vw;
    color: white;
}
@font-face {
    font-family: "Integral CF";
    src: url(../fonts/integral/IntegralCF-Regular.woff);
    font-weight: normal;
}
@font-face {
    font-family: integral-regular;
    src: url(../fonts/integral/IntegralCF-Bold.woff);
    font-weight: bold;
}
@font-face {
    font-family: JetBrains Mono;
    src: url(../fonts/JetBrainsMono-Regular.woff2);
    font-weight: normal;
}
@font-face {
    font-family: JetBrains Italic;
    src: url(../fonts/JetBrainsMono-Italic.woff2);
    font-weight: normal;
}

:root {
    --purple: #9900ff;
    --ltblue: #00ffff;
    --red: #FF0000;
    --green: #00ff00;
    --pink: #ff00ff;
    --teal: rgb(0, 255,150);
    --yellow: #ffff00;
    --blue: #0000ff;
    --grey: #1A1A1A

}
body{
    background-color: var(--grey);
    margin: 0;
}
h2{
    font-size: 10vw;
    position: absolute;
    opacity: 25%;
    margin-top: 0;
}
.overlay{
    rotate: 60deg;
    width: 100vw;
    height: 100vh;
    position: absolute;
    background-color: white;
    opacity: 5%;
    top: 0;
    left: -50em;
    overflow: hidden;

}
.name{
    display: flex;
    flex-direction: column;
    bottom: 20vh;
}
.name h2{
    font-family: "JetBrains Mono";
    margin: auto;
    font-size: 1.25em;
    position: relative;
    opacity: 100%;
    text-align: center;
}
.name h1{
    letter-spacing: .5em;
    margin: auto;
    font-size: 3vw;
}
.name br{
    display: none;
}
p{
    font-family: "JetBrains Mono";
}
h1{
    font-family: "Integral CF", sans-serif;
}
.logo{
    height: 30vh;
    margin: 20vh auto 15vh;
}
#homeDisplay{
    display: flex;
    flex-direction: column;
    height: 95vh;
}

body {
    background: #222;
}

.arrow {
    opacity: 0;
    position: absolute;
    left: 50%;
    top: 50%;
    transform-origin: 50% 50%;
    transform: translate3d(-50%, -50%, 0);
}


.arrow-one {
    animation: arrow-movement 2s ease-in-out infinite;
}
.arrow-two {
    animation: arrow-movement 2s 1s ease-in-out infinite;
}

.arrow:before,
.arrow:after {
    background: #fff;
    content: '';
    display: block;
    height: 3px;
    position: absolute;
    top: 40vh;
    left: 0;
    width: 30px;
}

.arrow:before {
    transform: rotate(45deg) translateX(-23%);
    transform-origin: top left;
}

.arrow:after {
    transform: rotate(-45deg) translateX(23%);
    transform-origin: top right;
}

@keyframes arrow-movement {
    0% {
        opacity: 0;
        top: 45%;
    }
    70% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}
.content{
    padding: 10vh 5vw;
}

.gradient{
    background: linear-gradient(130deg, var(--ltblue) 0%, var(--pink) 100%);
}

footer{
    padding-bottom: 5vh;
    padding-top: 5vh;
    display: flex;
    flex-direction: column;
    width: 100vw;
}
footer p{
    margin: auto;
}
.about{
    display: flex;
    margin-top: 10vw;
}
.about p{
}
.imageDiv img{
    width: 30vw;
    border-radius: 1em;
}

.imageDiv{
    display: flex;
    flex-direction: column;
}
.imageDiv p{
    text-align: center;
    font-size: small;
    margin: auto;
    margin-top: 1em;
}
.about p{
    margin-right: 2em;
}
body {
    background: #222;
    font-family: Arial, sans-serif;
    color: #fff;
}

.project-section::after {
    content: "";
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    z-index: 9998;
    display: none;
}
.project-section.show-popup::after {
    display: block;
}

.projects {
    margin-top: 5em;
    padding-top: 5em;
    display: flex;
    overflow: scroll;
    /*scroll-behavior: smooth;*/
    -ms-overflow-style: none;
    scrollbar-width: none;
    scroll-snap-type: x mandatory;

}

.project {
    background: #333;
    border: none;
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    padding: 2em;
    transition: all 0.5s ease;
    cursor: pointer;
    position: relative;
    width: 25em;
    margin: .5em;
    min-width: 20em;
    scroll-snap-align: start;


}
.projects::-webkit-scrollbar {
    display: none;
}

.project .descriptionDiv {
    max-height: 0;
    overflow: hidden;
    transition: max-height 1s ease;
}

.project:hover {
    background: #444;
    transform: translateY(-1em);
    transition: all .75s ease;
}

.project h3 {
    text-transform: uppercase;
    font-size: 1.5em;
    margin-top: 0;
}

.projectLink {
    display: inline-block;
    text-decoration: none;
    background: var(--teal);
    color: var(--grey);
    border-radius: 5px;
    padding: 0.5em 1em;
    margin-top: 1em;
    transition: background 0.5s ease;
}

.projectLink:hover {
    background: rgb(100, 255,250);
    transform: translateY(-.25em);
}

.languages {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 1em;
}
.tools{
    font-family: "JetBrains Italic";
    font-size: small;
}

.language {
    border-radius: 10px;
    padding: 0.3em 0.6em;
    margin: 0.2em;
    background: var(--teal);
    color: var(--grey);
    font-size: 0.8em;
}

#Python {
    background: var(--green);
}

#Swift {
    background: var(--pink);
}

#PHP {
    background: var(--purple);
}

#HTML {
    background: var(--yellow);
}

#JavaScript {
    background: var(--red);
}

#CSS {
    background: var(--ltblue);
}

.popup {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: #333;
    border-radius: 10px;
    padding: 2em;
    max-height: 80%;
    width: min(80vw, 45em);
    overflow: auto;
    z-index: 9999;
}
@media screen and (max-width: 800px) {
    .projects {
        margin-top: 5em;
        display: grid;
        grid-template-columns: 1fr;
        grid-gap: 1em;
    }

    .project {
        padding: 1em;
        min-width: 0;
        width: auto;
    }
    .project .descriptionDiv {
        max-height: none;
    }
    .project h3{
        margin-top: 1em;
    }
    .popup {
        max-width: 95%;
        max-height: 95%;
        padding: 1em;
    }

    .popup-content {
        padding: 1em;
    }

    .popup-content h3 {
        font-size: 1.2em;
    }

    .popup-close {
        font-size: 1em;
    }

}
.popup.show {
    display: flex;
    justify-content: center;
    align-items: center;
}

.popup-content {
    border-radius: 10px;
    padding: 2em;
    max-width: 80%;
    max-height: 80%;
    overflow: auto;
}
.popup-content h3{
    font-size: 1.5em;
    margin: 0 0 1em 0;
}
.popup-content .description {
    max-height: 40vh;
    overflow-y: scroll;
    scrollbar-width: thin;
    scrollbar-color: rgba(150, 150, 150);
}

.popup-content .description::-webkit-scrollbar {
    width: 8px;
}

.popup-content .description::-webkit-scrollbar-thumb {
    background-color: rgba(150, 150, 150);
    border-radius: 4px;
}
.popup-content .description::-webkit-scrollbar {
    width: 8px;
}

.popup-content .description::-webkit-scrollbar-thumb {
    background-color: rgba(150, 150, 150);
    border-radius: 4px;
}

.popup-close {
    position: absolute;
    top: 1em;
    right: 1em;
    font-size: 1.5em;
    color: rgba(150, 150, 150);
    cursor: pointer;
}

